# MatrixMultiplication

./: CMakeLists.txt  README.md
DMM/: CMakeLists.txt  README.md
DMM/include/: GPUdebug.hpp  common.hpp
DMM/src/: MM1.cu  MM10.cu  MM11.cu  MM12.cu  MM13.cu  MM2.cu  MM3.cu  MM4.cu  MM5.cu  MM6.cu  MM7.cu  MM8.cu  MM9.cu
DMM/src/tests/: errorGPU.cu  performance.cu
